--- a/app/src/main/res/layout-sw600dp/album_item.xml
+++ b/app/src/main/res/layout-sw600dp/album_item.xml
@@ -32,12 +32,14 @@
                 style="@style/Base.TextAppearance.AppCompat.Headline"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
+                android:textSize="@dimen/text_size_tablet"
                 app:mutableText="@{viewModel.getAlbumId()}" />
 
             <TextView
                 style="@style/Base.TextAppearance.AppCompat.Headline"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
+                android:textSize="@dimen/text_size_tablet"
                 app:mutableText="@{viewModel.getAlbumTitle()}" />
 
 
