--- a/app/src/main/res/layout-sw600dp/fragment_list_photo.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_list_photo.xml
@@ -3,9 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+
         <variable
-            name="albumByUserViewModel"
-            type="com.ab.exomind.ui.views.listAlbum.viewmodel.AlbumListByUserViewModel" />
+            name="viewModel"
+            type="com.ab.exomind.ui.views.listPhotos.viewmodel.ListPhotoViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -22,18 +23,19 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:mutableVisibility="@{albumByUserViewModel.getLoadingVisibility()}" />
+            app:mutableVisibility="@{viewModel.getLoadingVisibility()}" />
 
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/albumList"
+            android:id="@+id/photo_list"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:adapter="@{albumByUserViewModel.getAlbumAdapter()}"
+            app:adapter="@{viewModel.getPhotoAdapter()}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+     />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
