--- a/app/src/main/res/layout-sw600dp/fragment_user_list.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_user_list.xml
@@ -3,9 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+
         <variable
-            name="albumByUserViewModel"
-            type="com.ab.exomind.ui.views.listAlbum.viewmodel.AlbumListByUserViewModel" />
+            name="viewModel"
+            type="com.ab.exomind.ui.views.listUsers.viewModel.UserListViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -13,6 +14,18 @@
         android:layout_height="match_parent"
         android:background="@android:color/white">
 
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/user_search"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimaryDark"
+            android:textCursorDrawable="@null"
+            app:iconifiedByDefault="false"
+            app:layout_constraintBottom_toTopOf="@id/user_list"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:queryBackground="@null" />
 
         <ProgressBar
             android:id="@+id/progress"
@@ -22,18 +35,18 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:mutableVisibility="@{albumByUserViewModel.getLoadingVisibility()}" />
+            app:mutableVisibility="@{viewModel.getLoadingVisibility()}" />
 
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/albumList"
+            android:id="@+id/user_list"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:adapter="@{albumByUserViewModel.getAlbumAdapter()}"
+            app:adapter="@{viewModel.getUserListAdapter()}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/user_search" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
