--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,2 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+    <dimen name="item_margin">8dp</dimen>
+
+    <dimen name="image_width">100dp</dimen>
+    <dimen name="image_height">100dp</dimen>
+    <dimen name="image_width_tablet">200dp</dimen>
+    <dimen name="image_height_tablet">200dp</dimen>
+    <dimen name="image_details_width">500dp</dimen>
+    <dimen name="image_details_height">500dp</dimen>
+    <dimen name="image_details_width_land">200dp</dimen>
+    <dimen name="image_details_height_land">200dp</dimen>
+
+    <dimen name="text_size">18sp</dimen>
+    <dimen name="text_size_tablet">24sp</dimen>
+
+
+
+</resources>
