--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -12,10 +12,9 @@
     <androidx.cardview.widget.CardView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
+        android:layout_margin="@dimen/margin_card"
         android:background="@android:color/white"
-        app:cardCornerRadius="5dp"
-        app:contentPadding="16dp">
+>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
