--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,6 +10,8 @@
     <dimen name="image_details_height">500dp</dimen>
     <dimen name="image_details_width_land">200dp</dimen>
     <dimen name="image_details_height_land">200dp</dimen>
+    <dimen name="margin_card">5dp</dimen>
+
 
     <dimen name="text_size">18sp</dimen>
     <dimen name="text_size_tablet">24sp</dimen>
