--- a/app/src/main/res/layout-sw600dp/album_item.xml
+++ b/app/src/main/res/layout-sw600dp/album_item.xml
@@ -12,9 +12,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:background="@android:color/white"
-        app:cardCornerRadius="5dp"
-        app:contentPadding="16dp">
+        android:background="@android:color/white">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
